2010-10-08  Guillaume Cottenceau

	* RVAL2CSTR2 is deprecated, replace with RVAL2CSTR_ACCEPT_NIL

	* CSTR2RVAL2 is deprecated, replace with CSTR2RVAL_FREE

2010-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* ext/poppler/rbpoppler-page.c: support Poppler 0.15.0. [#3079667]
	Reported by Mamoru Tasaka. Thanks!!!

2010-09-29  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: fix dependencies.

	* Rakefile: add missing libjpeg dependency.
	Reported by U.Nakamura. Thanks!!!

2010-09-28  Kouhei Sutou  <kou@cozmixng.org>

	* test/run-test.rb: fix path.

	* Rakefile: add missing dependencies.

2010-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: don't add .zip into gem.

	* lib/poppler.rb: support bundled Windows DLL.

	* test/run-test.rb: fix extension library path.

	* ext/poppler/rbpoppler.h: don't use rbpopplerverseion.h when
	Poppler provides version macros.

	* ./: make buildable with rake-compiler.

2010-09-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/: -> ext/poppler/.

	* src/lib/: -> lib/.

2010-02-10  Kouhei Sutou  <kou@cozmixng.org>

	* sample/pdfdiv.rb: add.

2009-04-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/poppler.rb: ignore Gtk::InitError.

2008-11-03  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: remove needless checks.

	* extconf.rb, README, src/: remove 0.6.x support. require 0.8.0 or
	later.

2008-10-25  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_constants.rb: use assert_{,not_}const_defined in
	Test::Unit.

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use check_cairo.

2008-06-29  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_document.rb (TestDocument#test_save):
	omit if poppler < 0.8.2.

2008-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* test/run-test.rb: use glib/test/glib-test-init.rb.

2008-06-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-action.c: fix an index bug.

	* extconf.rb: include poppler.h in have_func test.

2008-05-23  Kouhei Sutou  <kou@cozmixng.org>
